Fixed touch button opacity on safari (best browser of all time)

--- a/tetris.css
+++ b/tetris.css
@@ -202,6 +202,7 @@ input {
 }
 
 .touch-box {
+    opacity: 0.7;
     position: absolute;
     width: 70px;
     height: 70px;
